FAC-811: refactor - Update Sort and Order enums to use title field